--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-mirage": "0.1.8",
+    "ember-cli-moment-shim": "0.6.2",
     "ember-cli-qunit": "^1.0.0",
     "ember-cli-release": "0.2.3",
     "ember-cli-sri": "^1.0.3",
@@ -39,7 +40,8 @@
     "ember-deploy-redis": "0.0.7",
     "ember-deploy-s3": "0.0.5",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3"
+    "ember-export-application-global": "^1.0.3",
+    "ember-moment": "4.0.1"
   },
   "dependencies": {
     "dotenv": "^1.2.0"
