--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "pe-blog",
   "dependencies": {
-    "ember": "canary",
+    "ember": "release",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-data": "release",
@@ -17,5 +17,8 @@
     "Faker": "~3.0.0",
     "moment": ">= 2.8.0",
     "moment-timezone": ">= 0.1.0"
+  },
+  "resolutions": {
+    "ember": "^2.0.0"
   }
 }
