styled real gud

--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,11 @@
     "lodash": "~3.7.0",
     "Faker": "~3.0.0",
     "moment": ">= 2.8.0",
-    "moment-timezone": ">= 0.1.0"
+    "moment-timezone": ">= 0.1.0",
+    "materialize": "~0.97.0"
   },
   "resolutions": {
-    "ember": "^2.0.0"
+    "ember": "^2.0.0",
+    "jquery": "^1.11.3"
   }
 }
