--- a/package.json
+++ b/package.json
@@ -30,18 +30,27 @@
     "ember-cli-htmlbars-inline-precompile": "^0.2.0",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-materialize": "0.18.5",
     "ember-cli-mirage": "0.1.8",
     "ember-cli-moment-shim": "0.6.2",
     "ember-cli-qunit": "^1.0.0",
     "ember-cli-release": "0.2.3",
+    "ember-cli-sass": "3.3.1",
     "ember-cli-sri": "^1.0.3",
+    "ember-cli-styles-reloader": "0.1.8",
     "ember-cli-uglify": "^1.2.0",
+    "ember-composability": "0.1.3",
     "ember-data": "2.0.0",
     "ember-deploy-redis": "0.0.7",
     "ember-deploy-s3": "0.0.5",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-moment": "4.0.1"
+    "ember-key-responder": "0.4.2",
+    "ember-legacy-views": "0.2.0",
+    "ember-modal-dialog": "0.7.7",
+    "ember-moment": "4.0.1",
+    "ember-new-computed": "1.0.3",
+    "ember-radio-button": "1.0.7"
   },
   "dependencies": {
     "dotenv": "^1.2.0"
